--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.mjs",
-    "dev": "nodemon sever.mjs"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Eddie Peters",
   "license": "ISC",
