--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
-    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "node": "^20.7.0",
-    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
-    "querystring": "^0.2.1",
-    "randomstring": "^1.3.0"
+    "querystring": "^0.2.1"
   }
 }
