--- a/server/package.json
+++ b/server/package.json
@@ -2,19 +2,23 @@
   "name": "spotifyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "npm install && npm run serve",
+    "serve": "nodemon"
   },
   "author": "Eddie Peters",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "nodemon": "^3.0.1",
     "querystring": "^0.2.1"
   }
