--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,6 @@
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "nodemon": "^3.0.1",
-    "querystring": "^0.2.1"
+    "query-string": "^9.1.1"
   }
 }
